"""TAPA Python library abgraph build configuration."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_python//python:defs.bzl", "py_library")
load("@tapa_deps//:requirements.bzl", "requirement")

py_library(
    name = "abgraph",
    srcs = glob(["**/*.py"]),
    visibility = ["//tapa:__subpackages__"],
    deps = [
        requirement("networkx"),
        requirement("pydantic"),
    ],
)
