"""TAPA Python library assets build configuration."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "assets",
    srcs = [
        "__init__.py",
        "verilog/__init__.py",
    ],
    data = glob(["verilog/*.v"]),
    visibility = ["//tapa:__subpackages__"],
)
