"""TAPA Python library backend build configuration."""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

py_library(
    name = "backend",
    srcs = glob(["**/*.py"]),
    visibility = ["//tapa:__subpackages__"],
)
