"""TAPA fast cosim"""

# Copyright (c) 2024 RapidStream Design Automation, Inc. and contributors.
# All rights reserved. The contributor(s) of this file has/have agreed to the
# RapidStream Contributor License Agreement.

load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_filegroup", "pkg_files", "pkg_mklink", "strip_prefix")
load("@tapa_deps//:requirements.bzl", "requirement")
load("//bazel:nuitka_rules.bzl", "nuitka_binary")

nuitka_binary(
    name = "nuitka",
    src = ":__main__.py",
    flags = [
        "--deployment",
        "--include-package-data=tapa",
        "--python-flag=isolated,no_docstrings,no_site,no_warnings",
    ],
    nuitka_environment = ":tapa-nuitka-env.py",
    output_name = "tapa-fast-cosim",
)

py_binary(
    name = "tapa-fast-cosim",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//visibility:public"],
    deps = [
        ":tapa-cosim-py-libs",
        "//tapa:tapa-py-libs",
    ],
)

py_binary(
    name = "tapa-nuitka-env.py",
    srcs = ["//bazel:nuitka_wrapper.py"],
    main = "nuitka_wrapper.py",
    deps = [
        ":tapa-cosim-py-libs",
        "//tapa:tapa-py-libs",
        requirement("nuitka"),
    ],
)

py_library(
    name = "tapa-cosim-py-libs",
    srcs = [
        ":common",
        ":config_preprocess",
        ":templates",
        ":vivado",
    ],
)

py_library(
    name = "common",
    srcs = ["common.py"],
)

py_library(
    name = "config_preprocess",
    srcs = ["config_preprocess.py"],
)

py_library(
    name = "templates",
    srcs = ["templates.py"],
    deps = [":common"],
)

py_library(
    name = "vivado",
    srcs = ["vivado.py"],
)

pkg_files(
    name = "pkg-runtime",
    srcs = [":nuitka"],
    attributes = pkg_attributes(mode = "0755"),
    prefix = "usr/share/tapa/cosim-runtime",
    strip_prefix = strip_prefix.from_pkg("__main__.dist"),
    visibility = ["//visibility:public"],
)

# link usr/share/tapa/cosim-runtime/tapa-fast-cosim to /usr/bin/tapa-fast-cosim
pkg_mklink(
    name = "pkg-link",
    link_name = "usr/bin/tapa-fast-cosim",
    target = "../share/tapa/cosim-runtime/tapa-fast-cosim",
    visibility = ["//visibility:public"],
)

pkg_filegroup(
    name = "pkg",
    srcs = [
        ":pkg-link",
        ":pkg-runtime",
    ],
    visibility = ["//visibility:public"],
)
